--- a/src/index.css
+++ b/src/index.css
@@ -72,13 +72,24 @@ h6 {
 	cursor: pointer;
 	font-family: 'Lato', sans-serif;
 	font-size: 16px;
+	border-radius: 5px;
+	margin: 5px;
 }
 
 .btn-primary {
 	background: var(--primary-color);
 }
+
 .btn-secondary {
 	background: var(--secondary-color);
+}
+
+.btn-success {
+	background: #28a745;
+}
+
+.btn-danger {
+	background: #dc3545;
 }
 
 .btn:hover {
