--- a/src/index.css
+++ b/src/index.css
@@ -240,12 +240,18 @@ h6 {
 		grid-template-columns: 1fr;
 	}
 
+	#article img {
+		height: 40vh;
+	}
+
 	.l-heading {
 		font-size: 2.5rem;
 	}
+
 	.m-heading {
 		font-size: 1.5rem;
 	}
+
 	.s-heading {
 		font-size: 1rem;
 	}
